# NetworkRightsChecker

./: .gitmodules  CMakeLists.txt  README.md
res/: sampleConfig.ini  style.css
src/: CMakeLists.txt  nrc.cpp
